# mautrix-max

./: .gitignore  Dockerfile  docker-compose.yaml  example-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
mautrix_max/: __main__.py  config.py  matrix.py  portal.py  puppet.py  user.py
mautrix_max/db/: __init__.py  message.py  portal.py  puppet.py  reaction.py  upgrade.py  user.py
mautrix_max/formatter/: __init__.py  from_matrix.py  from_max.py
mautrix_max/max/: __init__.py  base_client.py  bot_client.py  errors.py  media.py  protocol.py  types.py  user_client.py
mautrix_max/web/: __init__.py  provisioning.py
