[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mautrix-max"
version = "0.1.0"
description = "A Matrix-Max Messenger puppeting bridge based on mautrix-python"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "MergeChat", email = "support@mergechat.ru"}]
requires-python = ">=3.10"
dependencies = [
    "mautrix>=0.20",
    "asyncpg>=0.28",
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "msgpack>=1.0",
    "lz4>=4.3",
    "python-olm>=3.2",
    "pillow>=10.0",
    "ruamel.yaml>=0.18",
    "commonmark>=0.9",
    "python-magic>=0.4",
]

[project.scripts]
mautrix-max = "mautrix_max.__main__:main"

[tool.setuptools.packages.find]
include = ["mautrix_max*"]

[tool.setuptools.package-data]
mautrix_max = ["example-config.yaml"]
